--- a/ms-api-products/pom.xml
+++ b/ms-api-products/pom.xml
@@ -33,6 +33,7 @@
 		<springdoc.version>2.0.4</springdoc.version>
 		<mochito.version>5.12.0</mochito.version>
 		<jackson.version>2.18.1</jackson.version>
+		<flyway.version>10.21.0</flyway.version>
 	</properties>
 	<dependencies>
 		<!--  SPRING  -->
@@ -64,6 +65,15 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.flywaydb</groupId>
+    		<artifactId>flyway-core</artifactId>
+    		<version>${flyway.version}</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.flywaydb</groupId>
+    		<artifactId>flyway-mysql</artifactId>
+		</dependency>
 		<!--  test  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -82,12 +92,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
-		<!--  libraries  -->
+		<!--  libraries  
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version> 
-		</dependency>
+		</dependency>-->
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
