--- a/ms-api-products/src/main/resources/application.properties
+++ b/ms-api-products/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=ms-api-products
 server.port=8001
+spring.profiles.active=dev
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+
+#spring.jackson.deserialization.fail-on-unknown-properties=true
+
+#springdoc.packages-to-scan=br.com.lvc.app_senior.API.controllers.v1
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+#springdoc.paths-to-match=/v1/**
