--- a/ms-api-products/pom.xml
+++ b/ms-api-products/pom.xml
@@ -59,6 +59,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<!--  DATA BASE  -->
 		<dependency>
 			<groupId>com.mysql</groupId>
@@ -86,7 +90,7 @@
 			<version>${mochito.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!--  documentation  http://localhost:8080/swagger-ui/index.html  -->
+		<!--  documentation  http://localhost:8001/swagger-ui/index.html  -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
